# popular.front.archive

./: README.md  build.sh  db.sqlite3  manage.py  pyproject.toml  render.yaml
PopularFrontArchive/: asgi.py  settings.py  urls.py  wsgi.py
main/: models.py  urls.py  views.py
main/migrations/: 0001_initial.py  0002_post_created_at.py  0003_post_published_at.py
main/templates/main/: about.html  head.html  index.html
staticfiles/: staticfiles.json
